--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Bot and Dashboard to moderate and run the FreeCodeCamp twitch channel",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/app.js"
   },
   "repository": {
     "type": "git",
